# elos

src/plugins/scanners/syslog/: CMakeLists.txt
src/plugins/scanners/syslog/private/: forwarder.c  forwarder.h  syslog.c
src/plugins/storagebackends/: CMakeLists.txt
src/plugins/storagebackends/inmemory/: CMakeLists.txt
src/plugins/storagebackends/inmemory/private/: inmemoryBackend.c  inmemoryBackend.h  inmemoryPlugin.c
test/fuzz/: CMakeLists.txt
test/fuzz/example/: CMakeLists.txt  fuzz_rpn.dict  fuzz_tokenizer.c
test/smoketest/: config.json
test/utest/plugins/scanner/syslog/: CMakeLists.txt
test/utest/plugins/scanner/syslog/forwarder/: CMakeLists.txt
test/utest/plugins/scanner/syslog/forwarder/elosSyslogForwarderForwardMessage/: CMakeLists.txt  case_success.c  elosSyslogForwarderForwardMessage_utest.c  elosSyslogForwarderForwardMessage_utest.h
test/utest/plugins/scanner/syslog/forwarder/elosSyslogForwarderInitialize/: elosSyslogForwarderInitialize_utest.h
